# arcmail

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example/: arcmail.json
src/: allow.rs  conf.rs  constants.rs  esmtpd.rs  main.rs  manager.rs  smtpd.rs  smtpd_cmd.rs
src/smtpd/: allow.rs  cmd.rs  esmtpd.rs  mod.rs  server.rs  session.rs  stream.rs  util.rs
src/smtpd/stream/: common.rs  mod.rs  tcp.rs  tls.rs  util.rs
